# Embedded-Linux-Tasks

./: README.md
Capstone_Project/MultiServicesApplication/: README.txt
Capstone_Project/MultiServicesApplication/Host-x86/Applications/: CMakeLists.txt  count_app  count_app.cpp  math_app  print_app
Capstone_Project/MultiServicesApplication/Host-x86/Applications/lib/: MsgQueue_lib.cpp  boostLogger.cpp
Capstone_Project/MultiServicesApplication/Host-x86/Receiver_logger/: CMakeLists.txt  HostReceiver  HostReceiver.cpp  MsgQueue_lib.cpp  MsgQueue_lib.hpp  boostLogger.h
Capstone_Project/MultiServicesApplication/Host-x86/lib/MessageQueue/: MsgQueue_lib.cpp
Capstone_Project/MultiServicesApplication/raspi/: ConfigFile.txt  README.txt  logger.service
Capstone_Project/MultiServicesApplication/raspi/app/: CMakeLists.txt  math_app  math_app.cpp  print_app.cpp
Capstone_Project/MultiServicesApplication/raspi/app/lib/: MsgQueue_lib.cpp  MsgQueue_lib.hpp  math_app (copy).cpp
Capstone_Project/MultiServicesApplication/raspi/lib/boost_lib/: libboost_log.so.1.83.0  libboost_log_setup.so.1.83.0
Capstone_Project/MultiServicesApplication/raspi/logger_deamon/: CMakeLists.txt  ConfigFile.txt  Logger.cpp  LoggerDeamon  MsgQueue_lib.cpp  app.cpp  boostLogger.cpp  boostLogger.h  logfile.txt
Module_0_Tasks/Task1_Simple_Shell_script/: task1.sh
Module_0_Tasks/Task2_Backup_service/: README.txt  backup.service  backup.sh
Module_0_Tasks/Task3_wifi_Networks/: README.txt  wifi_Networks.sh
Module_0_Tasks/Task4_RPi_headlessMode/: README.txt
Module_1_Tasks/Task1_Rpi4_ct-ng/: README.txt
Module_1_Tasks/Task_2_static_shared_library/: read-me.txt
Module_1_Tasks/Task_2_static_shared_library/Static_library/: main.c  main.h  test_app  test_app.c
Module_1_Tasks/Task_2_static_shared_library/shared_library/: main.c  test_app.c  test_app_sharedlib
Module_1_Tasks/Task_3_MakeFile/: Makefile  README.txt  main.cpp
Module_1_Tasks/Task_4_CMake_based_project/: CMakeLists.txt  README.txt
Module_1_Tasks/Task_4_CMake_based_project/include/: Print.h  WriteInFile.h
Module_1_Tasks/Task_4_CMake_based_project/src/: Print.cpp  main.cpp
Module_1_Tasks/Task_5_File_Handler_Task/project/: CMakeLists.txt
Module_1_Tasks/Task_5_File_Handler_Task/project/Requester/: NamedPipe.h  Requester.cpp
Module_1_Tasks/Task_5_File_Handler_Task/project/Tests/: NamedPipe.cpp  Requester.h  SharedMemory.h  tests.cpp
Module_1_Tasks/Task_5_File_Handler_Task/project/fh/: FileHandler.cpp  FileHandler.h  SharedMemory.cpp  main.cpp
Module_1_Tasks/Task_5_File_Handler_updated/: CMakeLists.txt  my_named_pipe  my_shared_memory_key  run_logs.txt
Module_1_Tasks/Task_5_File_Handler_updated/Requester/: Requester.cpp  simpleLogger.cpp  simpleLogger.h
Module_1_Tasks/Task_5_File_Handler_updated/fh/: FileHandler.cpp  simpleLogger.h
Module_1_Tasks/Task_5_File_Handler_updated/simpleLogger/: simpleLogger.h
Module_2_Tasks/Task_1_U-boot_Configuration/: 0001-Second-edit-change-the-prompt-of-the-whole-branch.patch
Module_2_Tasks/Task_1_U-boot_Configuration_updatec/: 0001-reconfigure-and-rebuild-U-boot.patch
